--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.13.3
   provider: ^5.0.0
   cupertino_icons: ^1.0.2
+  record: ^3.0.0
+  just_audio: ^0.8.0
   
 
 dev_dependencies:
